# libtwigs

./: .gitignore  CMakeLists.txt  README.md  budget.json  transaction.json
include/: CMakeLists.txt
include/twigs/: api_service.h  budget.h  category.h  db_service.h  hashable.h  identifiable.h  permission.h  serializable.h  transaction.h  transaction_repository.h  twigs.h  user.h  utils.h
scripts/: build-android
src/: CMakeLists.txt
src/libtwigs/: CMakeLists.txt  budget.cpp  category.cpp  transaction.cpp  utils.cpp
src/test/: CMakeLists.txt  budget_test.cpp  budget_test.h  main.cpp  transaction_test.cpp  transaction_test.h  utils_test.cpp  utils_test.h
